templates/opa/constraints/k8sdisallowdefaultpods.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDefault
metadata:
  name: constraint-deny-default
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces:
      - kube-*
      - tkg-*
      - tanzu-*
      - vmware-*
      - dynatrace*
      - confluent
      - mongodb
      - twistlock
