templates/opa/constraints/k8spspallowedprivilegeescalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-*
      - tkg-*
      - tanzu-*
      - vmware-*
      - dynatrace*
      - confluent
      - mongodb
      - twistlock
