templates/opa/constraints/k8spspvolumetypes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-*
      - tkg-*
      - tanzu-*
      - vmware-*
      - dynatrace*
      - confluent
      - mongodb
      - twistlock
      - pass-expiry-*
  parameters:
    volumes:
    # - "*" # * may be used to allow all volume types
    - configMap
    - emptyDir
    - projected
    - secret
    - downwardAPI
    - persistentVolumeClaim
